--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Cool Landing Page</title>
+    <title>My Cool Landing Yes Page</title>
     <style>
         body {
             font-family: sans-serif;
